--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="assets/ggpopover.css" type="text/css">
-        <script src="assets/ggpopover.js"></script>
+        <link rel="stylesheet" href="ggpopover.css" type="text/css">
+        <script src="ggpopover.js"></script>
         <style>
             /*sizing*/
             html, body { height: 100% }
@@ -155,24 +155,24 @@
    <body>
        <div class="cb-header">
             <div class="left">
-                <img src="assets/charlie-icon.png"/>
+                <img src="charlie-icon.png"/>
             </div>
             <div class="right col-3">
                 <div class="icon close right">
                     <a href="#" onclick="alert('Fenster wird geschlossen!');">
-                        <img src="assets/close.png"/>
+                        <img src="close.png"/>
                     </a>
                 </div>
                 <div class="icon help right">
                     <a href="#_" data-toggle="popover" data-placement="auto" title="Hilfe"
                     data-content='Tippe "Hilfe", um dir diese anzeigen zu lassen.'>
-                        <img src="assets/help.png"/>
+                        <img src="help.png"/>
                     </a>
                 </div>
                 <div class="icon options right">
                     <a href="#_" data-toggle="popover" data-placement="auto" title="Sprache, Feedback, Dark-Mode"
                     data-content='Tippe "Feedback", um uns eine Rückmeldung zu geben. Weitere Funktionalitäten folgen.'>
-                        <img src="assets/options.png"/>
+                        <img src="options.png"/>
                     </a>
                 </div>
             </div>
@@ -180,12 +180,12 @@
        <div id="cb-introduction" class="cb-introduction">
             <div id="expandation" class="clear" onclick="triggerExpand()">
                 <div class="right">
-                    <img src="assets/toggle.png"/>
+                    <img src="toggle.png"/>
                 </div>
             </div>
            <div class="col-5 clear">
                <div class="col-3 left pic">
-                   <img src="assets/charlie-icon-big.png"/>
+                   <img src="charlie-icon-big.png"/>
                </div>
                <div class="intro left">
                    <h1>Hi, ich bin Charlie</h1>
