--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
    <body>
        <div class="cb-header">
             <div class="left">
-                <img src="charlie-icon.png"/>
+                <img src="Charlie-Icon.png"/>
             </div>
             <div class="right col-3">
                 <div class="icon close right">
@@ -185,7 +185,7 @@
             </div>
            <div class="col-5 clear">
                <div class="col-3 left pic">
-                   <img src="charlie-icon-big.png"/>
+                   <img src="Charlie-Icon-big.png"/>
                </div>
                <div class="intro left">
                    <h1>Hi, ich bin Charlie</h1>
