--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
             .webchat__icon-button[title="Datei hochladen"] svg {
                 display:none !important;
             }
-            .webchat__icon-button[title="Datei hochladen"]:after {
+            /*.webchat__icon-button[title="Datei hochladen"]:after {
                 content:url(options_active.png);
                 display:block;
+            }*/
+            .main > div:first-child {
+                width: 0 !important;
             }
             .webchat__icon-button {
                 background-color:#9d9393 !important;
