--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
             }
 
             /*overrides*/
+            .webchat__adaptive-card-renderer .ac-pushButton {
+                background-color: #9c9c1b !important;
+                border-width:0 !important;
+            }
+            .webchat__adaptive-card-renderer .ac-pushButton div {
+                font-size: 20px;
+                text-transform: uppercase;
+                color: #fff;
+            }
             .webchat__send-box-text-box__input {
                 background-color:#fff !important;
                 padding:6px !important;
