--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             }
 
             /*overrides*/
+            .webchat__stacked-layout__message{
+                max-width:600px !important;
+            }
             .webchat__adaptive-card-renderer .ac-pushButton {
                 background-color: #9c9c1b !important;
                 border-width:0 !important;
