--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
                 height: 25px;
                 width: auto;
             }
+            .icon.uxlc img {
+                height:35px;
+            }
+            .icon.uxlc {
+                margin-left:2px;
+                padding:7px 12px;
+            }
             .icon.close{
                 margin-left: 10px;
             }
@@ -125,7 +132,7 @@
             }
             h1 {
                 font-size: 2.25em;
-                color: #cfcf8c;
+                color: #919103;
                 text-transform: uppercase;
                 margin: 0.75em 0 0.25em;
                 letter-spacing: 1px;
@@ -176,6 +183,11 @@
                 <div class="icon close right">
                     <a href="#" onclick="alert('Fenster wird geschlossen!');">
                         <img src="close.png"/>
+                    </a>
+                </div>
+                <div class="icon uxlc right">
+                    <a href="http://ux.bmwgroup.net" target="_blank">
+                        <img src="uxlc.png"/>
                     </a>
                 </div>
                 <div class="icon help right">
