--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
          window.WebChat.renderWebChat(
             {
                directLine: window.WebChat.createDirectLine({
-                  secret: 'awDaDGaMR8w.jQb6NCE-xtFRJGao2n0ZYnAWLAeM-cx-8tlp7RpO0gQ'//you can find it in your web chat channel in azure
+                  secret: 'xxx'//you can find it in your web chat channel in azure
                }),
 
                // Passing 'styleSet' when rendering Web Chat
